--- a/contato.html
+++ b/contato.html
@@ -62,6 +62,7 @@
             <br>
             <button type="submit">Enviar</button>
         </form>
+        <button onclick="copia_cola()">Copia & Cola</button>
     </div>
     <div id="contato_img"></div>
 </section>
@@ -69,5 +70,8 @@
     <footer>
         <h2>Leonardo Miguel</h2>
     </footer>
+
+    <script src="./js/codigos.js"></script>
+
 </body>
 </html>
